crates/macros/src/snapshots/caesura_macros__tests__expand_cache_options.snap
---
source: crates/macros/src/tests.rs
expression: expand_options_from_file(source)
---
/// Partial options struct with optional fields for CLI/YAML parsing.
#[derive(
    ::clap::Args,
    ::std::clone::Clone,
    ::std::fmt::Debug,
    ::std::default::Default,
    ::serde::Deserialize,
    ::serde::Serialize
)]
pub struct CacheOptionsPartial {
    /// Path to cache directory.
    ///
    /// Default: ``~/.cache/caesura/` or platform equivalent`
    #[arg(long)]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub cache: Option<PathBuf>,
}
impl CacheOptionsPartial {
    fn resolve_internal(
        mut self,
        validate: bool,
    ) -> ::std::result::Result<
        CacheOptions,
        ::std::vec::Vec<::caesura_options::OptionIssue>,
    > {
        let mut validator = ::caesura_options::OptionsValidator::new();
        let defaults = self.clone();
        let cache = self.cache.or_else(|| default_cache(&defaults));
        let resolved = CacheOptions {
            cache: cache.unwrap_or_default(),
        };
        if validate {
            resolved.validate(&mut validator);
        }
        let issues = validator.into_issues();
        if issues.is_empty() {
            ::std::result::Result::Ok(resolved)
        } else {
            ::std::result::Result::Err(issues)
        }
    }
}
impl ::caesura_options::OptionsPartialContract for CacheOptionsPartial {
    type Resolved = CacheOptions;
    fn merge(&mut self, other: Self) {
        if self.cache.is_none() {
            self.cache = other.cache;
        }
    }
    fn resolve_without_validation(self) -> CacheOptions {
        self.resolve_internal(false).expect("validation disabled")
    }
    fn resolve(
        self,
    ) -> ::std::result::Result<
        CacheOptions,
        ::std::vec::Vec<::caesura_options::OptionIssue>,
    > {
        self.resolve_internal(true)
    }
}
impl ::std::default::Default for CacheOptions {
    fn default() -> Self {
        Self {
            cache: ::std::default::Default::default(),
        }
    }
}
impl ::caesura_options::Documented for CacheOptions {
    fn doc_metadata() -> &'static ::caesura_options::OptionsDoc {
        static DOC: ::std::sync::LazyLock<::caesura_options::OptionsDoc> = ::std::sync::LazyLock::new(||
        ::caesura_options::OptionsDoc {
            name: "CacheOptions",
            description: "Options for queue cache",
            fields: ::std::vec![
                ::caesura_options::FieldDoc { config_key : "cache", cli_flag : "--cache",
                field_type : "PathBuf", default_value :
                ::std::option::Option::Some(::serde_json::to_string(& < PathBuf >
                ::default()).unwrap()), default_doc :
                ::std::option::Option::Some("`~/.cache/caesura/` or platform equivalent"),
                description : "Path to cache directory.", }
            ],
        });
        &DOC
    }
}
const _: () = {
    fn __register(
        provider: &mut ::caesura_options::OptionsProvider,
        services: &mut ::di::ServiceCollection,
    ) {
        provider.register::<CacheOptionsPartial>(services);
    }
    ::inventory::submit!(
        ::caesura_options::OptionsRegistration { doc_metadata : < CacheOptions as
        ::caesura_options::Documented > ::doc_metadata, register : __register, }
    );
};
