crates/macros/src/snapshots/caesura_macros__tests__expand_runner_options.snap
---
source: crates/macros/src/tests.rs
expression: expand_options_from_file(source)
---
/// Partial options struct with optional fields for CLI/YAML parsing.
#[derive(
    ::clap::Args,
    ::std::clone::Clone,
    ::std::fmt::Debug,
    ::std::default::Default,
    ::serde::Deserialize,
    ::serde::Serialize
)]
pub struct RunnerOptionsPartial {
    /// Number of cpus to use for processing.
    ///
    /// Default: `Total CPUs`
    #[arg(long)]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub cpus: Option<u16>,
}
impl RunnerOptionsPartial {
    fn resolve_internal(
        mut self,
        validate: bool,
    ) -> ::std::result::Result<
        RunnerOptions,
        ::std::vec::Vec<crate::options::OptionRule>,
    > {
        let mut errors = ::std::vec::Vec::new();
        let defaults = self.clone();
        let cpus = self.cpus.or_else(|| default_cpus(&defaults));
        let resolved = RunnerOptions { cpus };
        if validate {
            resolved.validate(&mut errors);
        }
        if errors.is_empty() {
            ::std::result::Result::Ok(resolved)
        } else {
            ::std::result::Result::Err(errors)
        }
    }
}
impl crate::options::OptionsPartialContract for RunnerOptionsPartial {
    type Resolved = RunnerOptions;
    fn merge(&mut self, other: Self) {
        if self.cpus.is_none() {
            self.cpus = other.cpus;
        }
    }
    fn resolve_without_validation(self) -> RunnerOptions {
        self.resolve_internal(false).expect("validation disabled")
    }
    fn resolve(
        self,
    ) -> ::std::result::Result<
        RunnerOptions,
        ::std::vec::Vec<crate::options::OptionRule>,
    > {
        self.resolve_internal(true)
    }
}
impl ::std::default::Default for RunnerOptions {
    fn default() -> Self {
        Self {
            cpus: ::std::option::Option::None,
        }
    }
}
impl crate::options::Documented for RunnerOptions {
    fn doc_metadata() -> &'static crate::options::OptionsDoc {
        static DOC: ::std::sync::LazyLock<crate::options::OptionsDoc> = ::std::sync::LazyLock::new(||
        crate::options::OptionsDoc {
            name: "RunnerOptions",
            description: "Options for concurrency",
            fields: ::std::vec![
                crate ::options::FieldDoc { config_key : "cpus", cli_flag : "--cpus",
                field_type : "Option<u16>", default_value : ::std::option::Option::None,
                default_doc : ::std::option::Option::Some("Total CPUs"), description :
                "Number of cpus to use for processing.", }
            ],
        });
        &DOC
    }
}
const _: () = {
    fn __register(
        provider: &mut crate::options::OptionsProvider,
        services: &mut ::di::ServiceCollection,
    ) {
        provider.register::<RunnerOptionsPartial>(services);
    }
    ::inventory::submit!(
        crate ::options::OptionsRegistration { doc_metadata : < RunnerOptions as crate
        ::options::Documented > ::doc_metadata, register : __register, }
    );
};
